<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kitanasoftware.interactiveguide.map.MapScreen_5">

        <com.kitanasoftware.interactiveguide.map.HybridMap xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/hybridMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="top|left" />

        <Button
            android:id="@+id/zoomIn"
            style="@style/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/delGeopoints"
            android:layout_marginTop="5dp"
            android:text="+"
            android:visibility="gone" />

        <Button
            android:id="@+id/zoomOut"
            style="@style/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/zoomIn"
            android:layout_marginTop="5dp"
            android:text="-"
            android:visibility="gone" />

        <Button
            android:id="@+id/creationGeoOk"
            style="@style/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:onClick="onButtonClicked"
            android:text="@string/ok"
            android:visibility="gone" />

        <Button
            android:id="@+id/creationGeoCancel"
            style="@style/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:onClick="onButtonClicked"
            android:text="@string/cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/addGeopoint"
            style="@style/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editGeopoints"
            android:layout_marginBottom="5dp"
            android:onClick="onButtonClicked"
            android:text="@string/addGeopoint" />

        <Button
            android:id="@+id/editGeopoints"
            style="@style/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:onClick="onButtonClicked"
            android:text="@string/editGeopoints" />

        <Button
            android:id="@+id/delGeopoints"
            style="@style/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:onClick="onButtonClicked"
            android:text="@string/delGeo"
            android:visibility="gone" />


    </RelativeLayout>

    <android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="drawer"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/mainColor"
        app:menu="@menu/drawer_menu" />
</android.support.v4.widget.DrawerLayout>